appId: "com.recipedia"
---
- runFlow:
    file: "../../en/addRecipeImage.yaml"
    label: "Add recipe image"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTitle::CustomTextInput"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to title text input"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeTitle::CustomTextInput"
    label: "Press the TextInput of title"

- inputText:
    text: "Aiguillettes de poulet a la sauce satay"
    label: "Enter text for recipe title"

- tapOn:
    id: "RecipeTitle::Text"
    label: "Tap the title to close the keyboard"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeDescription::CustomTextInput"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to description text input"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeDescription::CustomTextInput"
    label: "Press the TextInput of description"

- inputText:
    text: "Cuisinez nos filets de poulet francais avec du riz basmati bio et une sauce satay maison: un condiment asiatique a base de cacahuetes et gingembre !"
    label: "Enter text for recipe description"

- tapOn:
    id: "RecipeDescription::Text"
    label: "Tap the description to close the keyboard"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTags::RoundButton"
    direction: DOWN
    speed: 20
    timeout: 120000
    centerElement: true
    label: "Scroll to tags's adding button"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeTags::RoundButton"
    label: "Press the round button of first tags"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTags::List::0::CustomTextInput"
    direction: UP
    speed: 10
    centerElement: true
    label: "Scroll to ensure first tag's text input is visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeTags::List::0::CustomTextInput"
    label: "Press the TextInput of first tags"

- runFlow:
    file: "../../../../inputAndCommitText.yaml"
    env:
      TARGET_ID: "RecipeTags::List::0::CustomTextInput"
      VALUE: "Healthy"
      DISMISS_ID: "RecipeTags::ElementText"
    label: "Enter text for recipe first tag"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to dismiss"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTags::RoundButton"
    direction: DOWN
    speed: 20
    timeout: 60000
    centerElement: true
    label: "Scroll to ensure add button is still visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeTags::RoundButton"
    label: "Press the round button of second tags"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTags::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to ingredient's add button"

- scrollUntilVisible:
    element:
      id: "RecipeTags::0::Chip"
    direction: UP
    speed: 20
    label: "Scroll up to ensure second tag's text input is visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeTags::List::1::CustomTextInput"
    label: "Press the TextInput of second tags"

- extendedWaitUntil:
    visible:
      id: "RecipeTags::List::1::AutocompleteItem::Breakfast"
    timeout: 30000
    label: "Wait for the autocomplete list to appear"

- runFlow:
    file: "../../../../../flows/dismissModalKeyboard.yaml"
    label: "Dismiss modal keyboard (platform-specific)"

- scrollUntilVisible:
    element:
      id: "RecipeTags::List::1::AutocompleteItem::Italian"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll the tag dropdown down towards Italian"

- waitForAnimationToEnd:
    label: "Wait for scrolling animation to end"

- assertVisible:
    id: "RecipeTags::List::1::AutocompleteItem::Italian"
    label: "Assert - Italian tag is displayed"

- tapOn:
    id: "RecipeTags::List::.*::AutocompleteItem::Italian"
    text: "Italian"
    label: "Press the tag from dropdown list"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to hide"

- extendedWaitUntil:
    notVisible:
      id: "RecipeTags::List::.*::AutocompleteItem::Italian"
    timeout: 10000
    label: "Wait for the second chip to disappear"

- scrollUntilVisible:
    element:
      id: "RecipeTags::0::Chip"
    direction: UP
    speed: 20
    timeout: 120000
    label: "Action - Scroll back to chip parts"

- waitForAnimationToEnd:
    label: "Wait for animation to end"

- assertVisible:
    id: "RecipeTags::1::Chip"
    label: "Assert - Second tag chip is visible"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to ingredients section"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Press the round button of first ingredient"

- tapOn:
    id: "RecipeIngredients::0::QuantityInput"
    label: "Press the TextInput of first ingredient's quantity"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "200"
    label: "Enter text for recipe first ingredient quantity"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- tapOn:
    id: "RecipeIngredients::0::NameInput::CustomTextInput"
    label: "Press the TextInput of first ingredient's name"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "Chicken Breast"
    label: "Enter text for recipe first ingredient name"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- tapOn:
    id: "RecipeIngredients::Header::IngredientName"
    label: "Tap on the ingredient name to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to dismiss"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 10
    centerElement: true
    label: "Scroll to ensure add button is still visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Press the round button of second ingredient"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 10
    centerElement: true
    label: "Scroll to ensure add button is still visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Press the round button of third ingredient"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 10
    centerElement: true
    label: "Scroll to ingredient's add a button to ensure second ingredient is visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Press the round button of fourth ingredient"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::1::QuantityInput"
    direction: UP
    speed: 10
    label: "Scroll up to ensure second ingredient's quantity input is visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeIngredients::2::QuantityInput"
    label: "Press the TextInput of third ingredient's quantity"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "2"
    label: "Enter text for recipe third ingredient quantity"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- tapOn:
    id: "RecipeIngredients::2::NameInput::CustomTextInput"
    label: "Press the TextInput of second ingredient's name"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- inputText:
    text: "Oni"
    label: "Enter text for recipe third ingredient name (partial)"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"
      - tapOn:
          id: "RecipeIngredients::2::NameInput::AutocompleteItem::Onions"
          label: "Press the ingredient from the dropdown"
      - runFlow:
          file: "../../../../waitForKeyboardDismiss.yaml"
          label: "Wait for numeric keyboard to disappear"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Done"
          label: "Tap Done key to dismiss keyboard on iOS"
      - runFlow:
          file: "../../../../waitForKeyboardDismiss.yaml"
          label: "Wait for numeric keyboard to disappear"
      - extendedWaitUntil:
          visible:
            id: "RecipeValidation::ValidationQueue::Ingredient::SimilarityDialog::Title"
          timeout: 30000
          label: "Wait for validation dialog to appear"
      - tapOn:
          id: "RecipeValidation::ValidationQueue::Ingredient::SimilarityDialog::UseButton"
          label: "Tap on the use button of similarity dialog"
      - extendedWaitUntil:
          notVisible:
            id: "RecipeValidation::ValidationQueue::Ingredient::SimilarityDialog::Title"
          timeout: 30000
          label: "Wait for validation dialog to disappear"

- tapOn:
    id: "RecipeIngredients::3::NameInput::CustomTextInput"
    label: "Press the TextInput of fourth ingredient's name"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- tapOn:
    id: "RecipeIngredients::3::Unit"
    label: "Tap on third ingredient's unit to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to dismiss"

- tapOn:
    id: "RecipeIngredients::3::NameInput::AutocompleteItem::Avocado"
    label: "Press the ingredient from the dropdown"

- extendedWaitUntil:
    notVisible:
      id: "RecipeIngredients::3::NameInput::AutocompleteItem::Avocado"
    timeout: 30000
    label: "Wait for autocomplete list to disappear"

- runFlow:
    file: "../../enterIngredientQuantity.yaml"
    env:
      INDEX: "3"
      VALUE: "5"
    label: "Fill fourth ingredient quantity: 5"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::1::QuantityInput"
    direction: UP
    speed: 10
    centerElement: true
    label: "Scroll up to ensure second ingredient's quantity input is visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeIngredients::1::NameInput::CustomTextInput"
    label: "Press the TextInput of second ingredient's name"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- runFlow:
    file: "../../../../inputAndCommitText.yaml"
    env:
      TARGET_ID: "RecipeIngredients::1::NameInput::CustomTextInput"
      VALUE: "Non-existing-ingredient"
      DISMISS_ID: "RecipeIngredients::1::Unit"
    label: "Enter text for recipe second ingredient name (non-existing)"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for numeric keyboard to disappear"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipeValidation::ValidationQueue::Ingredient::SimilarityDialog::Title"
    label: "Assert - Similarity dialog is visible"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::SimilarityDialog::CancelButton"
    label: "Tap on the cancel button of similarity dialog"

- extendedWaitUntil:
    notVisible:
      id: "RecipeIngredients::3::NameInput::CustomTextInput"
    timeout: 30000
    label: "Wait for fourth ingredient to disappear (second one has been removed)"

- scrollUntilVisible:
    element:
      id: "RecipeTime::NumericTextInput"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to persons section"

- waitForAnimationToEnd

- tapOn:
    id: "RecipeTime::NumericTextInput"
    label: "Press the TextInput of time"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "20"
    label: "Enter text for recipe time"

- tapOn:
    id: "RecipeTime::PrefixText"
    label: "Tap on the prefix text to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to preparation section"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    label: "Press the round button of first preparation"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::0::TextInputTitle::CustomTextInput"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to first preparation title input"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::EditableStep::0::TextInputTitle::CustomTextInput"
    label: "Press the TextInput of first preparation title"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- inputText:
    text: "Le riz"
    label: "Enter text for recipe first preparation title"

- tapOn:
    id: "RecipePreparation::EditableStep::.*::Title"
    label: "Tap on the title text to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to hide"

- tapOn:
    id: "RecipePreparation::EditableStep::0::TextInputContent::CustomTextInput"
    label: "Press the TextInput of first preparation paragraph"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- inputText:
    text: "Portez a ebullition une casserole d'eau salee.Faites cuire le riz selon les indications du paquet.Pendant ce temps, preparez les filets de poulet a la sauce satay."
    label: "Enter text for recipe first preparation paragraph"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- tapOn:
    id: "RecipePreparation::EditableStep::0::Content"
    label: "Tap on the content text to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to hide"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to see the add button of second preparation"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    label: "Press the round button of second preparation"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::1::TextInputTitle::CustomTextInput"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to second preparation title input"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::1::Title"
    direction: UP
    speed: 20
    label: "Scroll up in case the step title is not visible"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::EditableStep::1::TextInputTitle::CustomTextInput"
    label: "Press the TextInput of second preparation title"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- inputText:
    text: "La sauce"
    label: "Enter text for recipe second preparation title"

- tapOn:
    id: "RecipePreparation::EditableStep::.*::Title"
    label: "Tap on the title text to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to hide"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::1::TextInputContent::CustomTextInput"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to preparation section"

- waitForAnimationToEnd:
    label: "Wait for scroll animation to end"

- tapOn:
    id: "RecipePreparation::EditableStep::1::TextInputContent::CustomTextInput"
    label: "Press the TextInput of second preparation paragraph"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- runFlow:
    file: "../../../../appendText.yaml"
    env:
      TARGET_ID: "RecipePreparation::EditableStep::1::TextInputContent::CustomTextInput"
      VALUE: "Dans le bol d'un mixeur, deposez les ingredients suivants :"
    label: "Enter text for recipe second preparation paragraph (first line)"

- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: "ENTER"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Return"
          label: "Tap Done key to go to a new line"

- runFlow:
    file: "../../../../appendText.yaml"
    env:
      TARGET_ID: "RecipePreparation::EditableStep::1::TextInputContent::CustomTextInput"
      VALUE: "epluchez et hachez le gingembre."
    label: "Enter text for recipe second preparation paragraph (second line)"

- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: "ENTER"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Return"
          label: "Tap Done key to go to a new line"

- runFlow:
    file: "../../../../appendText.yaml"
    env:
      TARGET_ID: "RecipePreparation::EditableStep::1::TextInputContent::CustomTextInput"
      VALUE: "Ajoutez les cacahuetes, le sucre et le lait de coco."
    label: "Enter text for recipe second preparation paragraph (third line)"

- runFlow:
    file: "../../../../appendText.yaml"
    env:
      TARGET_ID: "RecipePreparation::EditableStep::1::TextInputContent::CustomTextInput"
      VALUE: "Salez, poivrez. Mixez jusqu'a obtenir une texture homogene."
    label: "Enter text for recipe second preparation paragraph (fourth line)"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "RecipePreparation::EditableStep::1::Content"
          label: "Tap on the second content text to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to disappear"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to second preparation title input"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    waitToSettleTimeoutMs: 0
    retryTapIfNoChange: false
    label: "Press the round button of third preparation"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::2::TextInputTitle::CustomTextInput"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to third preparation title input"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::EditableStep::2::TextInputTitle::CustomTextInput"
    label: "Press the TextInput of third preparation title"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- inputText:
    text: "LA CUISSON DU POULET"
    label: "Enter text for recipe third preparation title"

- tapOn:
    id: "RecipePreparation::EditableStep::2.*:Title"
    label: "Tap on the title text to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to hide"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::2::TextInputContent::CustomTextInput"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to third preparation paragraph input"

- waitForAnimationToEnd

- tapOn:
    id: "RecipePreparation::EditableStep::2::TextInputContent::CustomTextInput"
    label: "Press the TextInput of third preparation paragraph"

- runFlow:
    file: "../../../../waitForKeyboard.yaml"
    label: "Wait for keyboard to appear"

- inputText:
    text: "Coupez les filets de poulet en lanieres.\nemincez l'oignon.\nPressez ou hachez l'ail.\nDans une poele, faites chauffer un filet d'huile de cuisson a feu moyen a vif."
    label: "Enter text for recipe third preparation paragraph"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "RecipePreparation::EditableStep::2::Content"
          label: "Tap on the third content text to close the keyboard"

- runFlow:
    file: "../../../../waitForKeyboardDismiss.yaml"
    label: "Wait for keyboard to disappear"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionEmptyState::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    label: "Scroll to see the nutrition add button"

- waitForAnimationToEnd
